--- a/gallery.html
+++ b/gallery.html
@@ -21,13 +21,33 @@
             <!-- Navigation menu with three links: amenities, floorplans, and gallery. Dropdown with two links: applicant login and resident login -->
             <nav class="navbar fixed-top navbar-dark bg-dark">
               <a class="navbar-brand" href="index.html">Example Apartments</a>
+              <div class="navPrimary d-flex justify-content-between align-items-center">
+                  <a class="navPrimary-item" href="#">Applicant Login</a>
+                  <a class="navPrimary-item" href="#">Resident Login</a>
+                  <a class="navPrimary-item" href="tel:502-123-4567">502-123-4567</a>
+                  <button class="navbar-toggler mobileNav" type="button" data-toggle="collapse" data-target="#navbarMobile" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="mobileNav"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16"><path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/></svg></span>
+                  </button>
+                  <a class="mobileNav" href="tel:502-123-4567"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/></svg></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+              </div>
+              <div class="collapse navbar-collapse" id="navbarMobile">
+                  <ul class="navbar-nav">
+                      <li class="nav-item dropdown">
+                              <a class="nav-link" href="#">Applicant Login</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                              <a class="nav-link" href="#">Resident Login</a>
+                      </li>
+                  </ul>
+             </div>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="amenities.html">Amenities</a>
@@ -37,15 +57,6 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="gallery.html">Photos</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Login
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#">Applicant Login</a>
-                      <a class="dropdown-item" href="#">Resident Login</a>
-                    </div>
                   </li>
                 </ul>
               </div>
