Fixed mobile navbar. Added amenities and floorplans content.

--- a/amenities.html
+++ b/amenities.html
@@ -20,7 +20,7 @@
         <nav>
             <!-- Navigation menu with three links: amenities, floorplans, and gallery. Dropdown with two links: applicant login and resident login -->
             <nav class="navbar fixed-top navbar-dark bg-dark">
-              <a class="navbar-brand" href="index.html">Example Apartments</a>
+              <a class="navbar-brand" href="index.html">Example</a>
               <div class="navPrimary d-flex justify-content-between align-items-center">
                   <a class="navPrimary-item" href="#">Applicant Login</a>
                   <a class="navPrimary-item" href="#">Resident Login</a>
@@ -68,6 +68,40 @@
         <header class="secondary-header jumbotron z-depth-5">
         </header>
         <!-- HEADER END -->
+        
+        <!-- MAIN CONTENT START -->
+        <div class="amenitiesContent">
+            <h1>Community</h1>
+            <img class="textLine" src="img/line.png" alt="line">
+            <ul>
+                <li>Pool</li>
+                <li>Dog Park</li>
+                <li>Playground</li>
+                <li>Picnic Area</li>
+                <li>Clubhouse</li>
+                <li>24 hour maintenance</li>
+            </ul>
+            <h1>Apartments</h1>
+            <img class="textLine" src="img/line.png" alt="line">
+            <ul>
+                <li>Stainless-steel Appliances</li>
+                <li>Wood Flooring</li>
+                <li>Granite Countertops</li>
+                <li>Dishwasher</li>
+                <li>Washer / Dryer Hookup</li>
+                <li>Ceiling Fans</li>
+                <li>Walk-in Closets</li>
+            </ul>
+            <h1>Pet Friendly</h1>
+            <img class="textLine" src="img/line.png" alt="line">
+            <ul>
+                <li>Dogs</li>
+                <li>Cats</li>
+                <li>Birds</li>
+                <li>Reptiles</li>
+            </ul>
+        </div>
+        <!-- MAIN CONTENT END    -->
         
         <!--FOOTER START-->
         <footer class="fixed-bottom">
