--- a/floorplans.html
+++ b/floorplans.html
@@ -20,7 +20,7 @@
         <nav>
             <!-- Navigation menu with three links: amenities, floorplans, and gallery. Dropdown with two links: applicant login and resident login -->
             <nav class="navbar fixed-top navbar-dark bg-dark">
-              <a class="navbar-brand" href="index.html">Example Apartments</a>
+              <a class="navbar-brand" href="index.html">Example</a>
               <div class="navPrimary d-flex justify-content-between align-items-center">
                   <a class="navPrimary-item" href="#">Applicant Login</a>
                   <a class="navPrimary-item" href="#">Resident Login</a>
@@ -68,6 +68,14 @@
         <header class="secondary-header jumbotron z-depth-5">
         </header>
         <!-- HEADER END -->
+        
+        <!-- MAIN CONTENT START -->
+        <div class="floorplanContent">
+            <h1>Floor Plans</h1>
+            <img class="textLine" src="img/line.png" alt="line">
+            <p>Our beautifully designed floor plans are guaranteed to meet your every need! We offer one-bedroom, two-bedroom, and three-bedroom layouts and also have select townhomes. Whether you are looking for a temporary home or settling down in your forever home, we are the place for you!</p>
+        </div>
+        <!-- MAIN CONTENT END    -->
         
         <!--FOOTER START-->
         <footer class="fixed-bottom">
