--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         <nav>
             <!-- Navigation menu with three links: amenities, floorplans, and gallery. Dropdown with two links: applicant login and resident login -->
             <nav class="navbar fixed-top navbar-dark bg-dark">
-              <a class="navbar-brand" href="index.html">Example Apartments</a>
+              <a class="navbar-brand" href="index.html">Example</a>
               <div class="navPrimary d-flex justify-content-between align-items-center">
                   <a class="navPrimary-item" href="#">Applicant Login</a>
                   <a class="navPrimary-item" href="#">Resident Login</a>
